Fri May 26 20:20:58 1995  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in, Makefile.in: Add support for building shared libraries.

Thu May 25 15:33:45 1995 Keith Vetter (keithv@fusion.com)

	* os-proto.h: moved prototype for krb5_make_fulladdr to
	   los-proto.h since it's needed by the krb directory.
	* ktdefnam.c: fixed signed/unsigned mismatch.
	* read_pwd.c: pc stub didn't track changes to the real routines
	   parameter list (const was added).

Tue May 23 16:29:24 1995  Theodore Y. Ts'o  (tytso@dcl)

	* t_std_conf.c, timeofday.c, unlck_file.c: Rearrange #include
		files so that krb5.h gets included first, so that the
		debugging information can be more efficiently collapsed
		since the type numbers will be the same.

Tue May 16 10:33:03 EDT 1995	Paul Park	(pjpark@mit.edu)
	* gmt_mktime.c	- Use the actual year instead of the number of years
			  since 1900 when determining if a year has a leapday.
			  Makes dates after February in the year 2000 correct.

Mon May 15 05:08:05 1995    <tytso@rsx-11.mit.edu>

	* ktdefname.c (krb5_kt_default_name): Use the KRB5_KTNAME
		environment variable to override the default location of
		the keytab.

Mon May  8 22:19:23 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* read_pwd.c (krb5_read_password): use volatile on all
		systems. Let configure define volatile to nothing on
		systems without. 

	* configure.in: Add HAS_ANSI_VOLATILE

	* mk_faddr.c (krb5_make_fulladdr): Allocate enough memory for
		raddr contents.

	* read_pwd.c (krb5_read_password): Make arguments prompt and
		prompt2 const char * for convenience to callers.

Mon May  1 17:05:21 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* init_os_ctx.c (krb5_set_config_files): Added required const to
		function declaration to be compatbile with call to
		profile_init. 

Mon May 01 15:56:32 1995  Chris Provenzano (proven@mit.edu)

        * genaddrs.c (krb5_auth_con_genaddrs()),
	* mk_faddr.c (krb5_make_fulladdr()), os-proto.h :