@@ -1,3 +1,7 @@
+Fri Jun 2 17:54:12 1995 Keith Vetter (keithv@fusion.com)
+
+	* net_read.c, net_write.c: made to work with sockets.
+
 Fri May 26 20:20:58 1995  Theodore Y. Ts'o  (tytso@dcl)
 
 	* configure.in, Makefile.in: Add support for building shared libraries.
